--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <div class="redCircle" style="filter: blur(200px)"></div>
+    <div class="greenCircle" style="filter: blur(200px)"></div>
+    <div class="lavCircle" style="filter: blur(100px)"></div>
   </body>
 </html>
