--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
   </head>
   <body>
     <div id="root"></div>
-    <div class="redCircle"></div>
-    <div class="greenCircle"></div>
-    <div class="lavCircle"></div>
+    <!-- <div class="redCircle"></div> -->
+    <!-- <div class="greenCircle"></div>
+    <div class="lavCircle"></div> -->
   </body>
 </html>
