--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <div class="greenCircle"></div>
-    <div class="lavCircle"></div>
+    <!-- <div class="greenCircle"></div>
+    <div class="lavCircle"></div> -->
   </body>
 </html>
