--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,7 @@
     <div id="root"></div>
     <!-- <div class="greenCircle"></div>
     <div class="lavCircle"></div> -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
   </body>
 </html>
