--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="%PUBLIC_URL%/styles.css" />
+
+    <!-- Fallback Fonts -->
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital@0;1&family=Roboto+Mono:wght@200&display=swap');
+    </style>
     <title>Yilla Chen — Software Engineer</title>
   </head>
   <body>
