--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="%PUBLIC_URL%/styles.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/styles.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/mobile.css" />
 
     <!-- Fallback Fonts -->
     <style>
