style: noto display replacing nanum

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
     <!-- Fallback Fonts -->
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&family=Roboto+Mono:wght@300&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Noto+Serif+Display&family=Roboto+Mono:wght@300&display=swap");
     </style>
     <title>Yilla Chen — Software Engineer</title>
   </head>
